# ESD_OEDS

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  REUSE.toml  compose.yml  config.example.yml  crontab  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml
crawler/: __init__.py  chargepoint.py  dwd.py  e2watch.py  ecmwf.py  entsoe_crawler.py  entsog.py  eon_grid_fees.py  eview.py  fernwaerme_preisuebersicht.py  frequency.py  gie_crawler.py  instrat_pl.py  iwugebaeudetypen.py  jao_crawler.py  jrc-idees.py  ladesaeulenregister.py  londondatastore.py  mastr.py  netztransparenz.py  ninja.py  nrw_kwp_waermedichte.py  nuts_mapper.py  opec.py  opsd.py  refit.py  regelleistung.py  smard.py  synpro.py  vea_industrial_load_profiles.py  windmodel.py
crawler/common/: base_crawler.py
crawler/data/: generate_plz_matrix.py  plz_matrix.npy.license
data/provisioning/pgadmin/: servers.json
docs/source/: README.md  getting_started.md  index.rst
oeds/: base_crawler.py  main.py
oeds/crawler/: __init__.py  chargepoint.py  dwd.py  e2watch.py  ecmwf.py  eex.py  entsoe_crawler.py  entsog.py  eon_grid_fees.py  eview.py  fernwaerme_preisuebersicht.py  frequency.py  gie_crawler.py  instrat_pl.py  iwugebaeudetypen.py  jao_crawler.py  jrc_idees.py  ladesaeulenregister.py  londondatastore.py  mastr.py  netztransparenz.py  ninja.py  nrw_kwp_waermedichte.py  nuts_mapper.py  opec.py  opsd.py  refit.py  regelleistung.py  smard.py  synpro.py  vea_industrial_load_profiles.py  windmodel.py
(+2 files in other folders)
